# ElectionsDataAutomation

./: pyproject.toml  test.py
electionsdataautomation/: KeywordFilter.py  NewsArticle.py  NewsArticles.db  NewsDataScraper.py  __init__.py  articles-v4.xlsx  articles.xlsx  main.py  test.csv
